--- a/src/widgets/tree/index.css
+++ b/src/widgets/tree/index.css
@@ -215,6 +215,12 @@
     font-size: 12px;
 }
 
+:global(*),
+:global(:after ),
+:global(:before ) {
+    box-sizing: border-box;
+}
+
 :global(.sv-tree li) {
     padding: 2px 0;
     margin: 0;
@@ -507,7 +513,7 @@
     content: ' ';
     width: 1px;
     border-left: 1px solid #d9d9d9;
-    height: 100%;
+    height: 80%;
     position: absolute;
     left: 12px;
     margin: 18px 0;
