--- a/src/widgets/tree/index.css
+++ b/src/widgets/tree/index.css
@@ -222,7 +222,7 @@
 }
 
 :global(.sv-tree li) {
-    padding: 2px 0;
+    padding: 0;
     margin: 0;
     list-style: none;
     white-space: nowrap;
