--- a/src/widgets/tree/index.css
+++ b/src/widgets/tree/index.css
@@ -120,18 +120,17 @@
 }
 
 :global(.sv-tree-checkbox-checked .sv-tree-checkbox-inner:after) {
-    transform: rotate(0) scale(1);
+    transform: rotate(35deg) scale(1);
     position: absolute;
-    left: 4px;
-    top: 1px;
+    left: 30%;
+    top: 0px;
     display: table;
-    width: 3px;
-    height: 6px;
+    width: 45%;
+    height: 90%;
     border: 2px solid #fff;
     border-top: 0;
     border-left: 0;
     content: ' ';
-    /*transition: all 0.2s cubic-bezier(0.12, 0.4, 0.29, 1.46) 0.1s;*/
 }
 
 :global(.sv-tree-checkbox-checked .sv-tree-checkbox-inner),
@@ -192,23 +191,6 @@
     display: inline-block;
 }
 
-@media screen {
-    :global(.sv-tree-checkbox-checked .sv-tree-checkbox-inner:after) {
-        font-family: "iconfont" !important;
-        text-rendering: optimizeLegibility;
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-        content: "\e6c2";
-        font-weight: bold;
-        font-size: 8px;
-        border: 0;
-        color: #fff;
-        left: 0px;
-        top: 0px;
-        position: absolute;
-    }
-}
-
 :global(.sv-tree) {
     margin: 0;
     padding: 0;
@@ -264,11 +246,13 @@
     margin: 0;
     padding: 0 0 0 18px;
 }
+
 :global(.sv-tree .sv-tree-switcher) {
-     min-height: 17px;
+    min-height: 17px;
 }
+
 :global(.sv-tree .sv-tree-checkbox) {
-     min-height: 17px;
+    min-height: 17px;
 }
 
 :global(.sv-tree li .sv-tree-node-content-wrapper) {
