修改：   * Icon指向的时候是手势；   * 固定字体。

--- a/src/widgets/tree/index.css
+++ b/src/widgets/tree/index.css
@@ -192,6 +192,7 @@
 }
 
 :global(.sv-tree) {
+    font-family: tahoma, arial, helvetica, sans-serif;
     margin: 0;
     padding: 0;
     font-size: 12px;
