--- a/src/widgets/css/sv.css
+++ b/src/widgets/css/sv.css
@@ -10,6 +10,10 @@
         /* IE6-IE8 */ url('./font/iconfont.woff?t=1502874699252') format('woff'), /* chrome, firefox */ url('./font/iconfont.ttf?t=1502874699252') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/ url('./font/iconfont.svg?t=1502874699252#iconfont') format('svg'); /* iOS 4.1- */
 }
 
+:global(input::-ms-clear) {
+    display: none;
+}
+
 :global(.iconfont) {
     font-family: "iconfont" !important;
     font-size: 16px;
