--- a/src/widgets/css/sv.css
+++ b/src/widgets/css/sv.css
@@ -3,6 +3,10 @@
     box-sizing: border-box;
 }
 
+:global(input) {
+    box-sizing: border-box;
+}
+
 @font-face {
     font-family: "iconfont";
     src: url('./font/iconfont.eot?t=1502874699252'); /* IE9*/
