--- a/src/widgets/css/sv.css
+++ b/src/widgets/css/sv.css
@@ -8,7 +8,7 @@
 }
 
 @font-face {
-    font-family: "iconfont";
+    font-family: "sviconfont";
     src: url('./font/iconfont.eot?t=1502874699252'); /* IE9*/
     src: url('./font/iconfont.eot?t=1502874699252#iefix') format('embedded-opentype'),
         /* IE6-IE8 */ url('./font/iconfont.woff?t=1502874699252') format('woff'), /* chrome, firefox */ url('./font/iconfont.ttf?t=1502874699252') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/ url('./font/iconfont.svg?t=1502874699252#iconfont') format('svg'); /* iOS 4.1- */
@@ -18,8 +18,8 @@
     display: none;
 }
 
-:global(.iconfont) {
-    font-family: "iconfont" !important;
+:global(.sviconfont) {
+    font-family: "sviconfont" !important;
     font-size: 16px;
     font-style: normal;
     -webkit-font-smoothing: antialiased;
