--- a/src/widgets/css/font/lugia-icon.css
+++ b/src/widgets/css/font/lugia-icon.css
@@ -933,3 +933,6 @@ url("./lugia-icon.svg?10be6f7fcb583fcc5094fd8e061f8b84#lugia-icon") format("svg"
         transform: rotate(360deg);
     }
 }
+body {
+    font-family: Helvetica Neue, Helvetica, Arial
+}
