增加    *Avatar 头像,Badge 徽章标记组件 修改    * theme flow类型检查 增加    * 提取getMargin -> common\ThemeUtils

--- a/src/widgets/css/font/lugia-icon.css
+++ b/src/widgets/css/font/lugia-icon.css
@@ -897,3 +897,6 @@ i[class^="lugia-icon-"]:before, i[class*=" lugia-icon-"]:before {
     transform: rotate(360deg);
   }
 }
+body {
+    font-family: Helvetica Neue, Helvetica, Arial
+}
