*修改：     * table 和 分页 样式；

--- a/src/widgets/table/style/lugia-table.css
+++ b/src/widgets/table/style/lugia-table.css
@@ -28,3 +28,6 @@
 :global(.lugia-table-bordered .rc-table-body table) {
   border-collapse: collapse;
 }
+:global(.rc-table tr:hover) {
+  background: rgba(77, 99, 255, .05);
+}
