--- a/src/widgets/css/font/lugia-icon.css
+++ b/src/widgets/css/font/lugia-icon.css
@@ -12,6 +12,7 @@ i {
 }
 
 i[class^="lugia-icon-"], i[class*=" lugia-icon-"] {
+    display: inline-block;
     font-style: normal;
     font-weight: normal !important;
     font-variant: normal;
