--- a/src/widgets/table/style/lugia-table.css
+++ b/src/widgets/table/style/lugia-table.css
@@ -8,6 +8,21 @@
 :global(.lugia-table .rc-table-content) {
   border: none;
 }
+:global(.lugia-table .rc-table-header) {
+  border: none;
+}
+:global(.lugia-table .rc-table-body) {
+  border: none;
+}
+:global(.lugia-table .rc-table-fixed-column .rc-table-body::after) {
+  border: none;
+}
+:global(.lugia-table .rc-table-ping-right .rc-table-cell-fix-right-first::after) {
+  box-shadow: inset -10px 0 8px -8px #4d63ff;
+}
+:global(.lugia-table .rc-table-cell-fix-right-first) {
+  box-shadow: -1px 0 0 #4d63ff;
+}
 :global(.lugia-table .rc-table th) {
   border: none;
 }
